[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "yummyanime"
version = "0.0.2"
authors = [
  { name="IM.Corp", email="root@yummyani.me" },
]
dynamic = ["dependencies"]
description = "Yummy Anime API wrapper"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://yummyani.me/"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
